k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: microservices-blog
  name: microservices-blog-ingress
  labels:
    app: microservices-blog
  annotations:
    # These annotations configure the ingress controller behavior
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      # # API Gateway handles all /api/* requests
      # - path: /api(/|$)(.*)
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: api-gateway
      #       port:
      #         number: 80

      
      # send requests to auth service for testing
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 80
      
      # Everything else goes to the frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      # - path: /keycloak
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: keycloak
      #       port:
      #         number: 8080
